# SoundBuddy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePublish.cmake  CPPLINT.cfg  Pipfile  README.md  conanfile.txt  feedtnz.cpp  timer.cpp
build_templates/: Info.plist.in  version.h.in
cmake/: CMakeDependencies.cmake  CMakeDependencies.in.sh  CMakePublish.cmake  FindARM.cmake
cmake/Qt/: DeployQt.cmake  QtTranslation.cmake
cmake/win/: CMakeDependencies.cmake  CMakeDependencies.in.sh  Findsigntool.cmake
ifw/: EndInstallerForm.js
ifw/i18n/: custom_ifw_fr.ts
libs/filesystem/: path.hpp
libs/itunescom/: iTunesEventHandler.cpp
libs/plistcpp/: NSPlist.cpp  NSPlistLexer.cpp  Plist.cpp  Plist.hpp  base64.hpp
libs/qtautoupdater/autoupdatercore/: qtautoupdatercore_global.h  updater.cpp
libs/socketiocpp_custom/internal/: sio_client_impl.cpp  sio_client_impl.h
packager/: download.txt
packager/config/: config.xml
prerequisites/: brew.txt  msys.txt
resources/: resources.qrc  resources.rc
resources/icons/: app.icns  feedtnz.icns  package.icns
resources/mac/: CurrentlyPlaying.applescript
src/: feedtnz.cpp  main.cpp  version.h
src/_i18n/: EndInstallerForm_fr.qm  fr.ts  trad.hpp
src/_ifw/: EndInstallerForm.js  EndInstallerForm.ui
src/_libs/autoupdatercore/: adminauthoriser.h  simplescheduler.cpp  simplescheduler_p.h  updater.cpp  updater.h  updater_p.cpp  updater_p.h
src/_libs/base64/: base64.cpp
src/_libs/socketiocpp_custom/: sio_socket.cpp  sio_socket.h
src/_libs/socketiocpp_custom/internal/: sio_client_impl.cpp
src/functions/: xmlProcessing.cpp
src/helpers/: AppSettings.hpp  Defer.hpp  HashHelper.hpp  PlatformHelper.cpp  PlatformHelper.h  PlatformHelper.mac.cpp  PlatformHelper.win.cpp  UploadHelper.hpp  _const.cpp  _const.hpp  configHelper.cpp  const.cpp  filesystem.h  outputHelper.cpp  platformHelper.cpp  stringHelper.cpp
src/helpers/configHelper/: authHelper.cpp  authHelper.hpp  configHelper.cpp  configHelper.hpp
src/helpers/iTunesLibParser/: iTunesLibParser.cpp  iTunesLibParser.h
src/helpers/mac/: platformHelper.cpp
src/helpers/outputHelper/: outputHelper.cpp  outputHelper.hpp
src/helpers/platformHelper/: platformHelper.cpp  platformHelper.h  platformHelper.mac.cpp  platformHelper.win.cpp
src/helpers/stringHelper/: stringHelper.cpp  stringHelper.hpp
src/helpers/windows/: platformHelper.cpp
src/i18n/: app_fr.ts  trad.hpp
src/ifw/: install.js
src/localization/: i18n.cpp  i18n.hpp
src/localization/i18n/: Ii18n.h  en_EN.cpp  fr_FR.cpp
src/tnzLib/: IMessageHelper.cpp  messageHelperR.cpp
src/tnzLib/feeder/: feeder.cpp
src/ui/: feedtnzTab.cpp  mainWindow.cpp  mainWindow.h
src/ui/mac/: mainWindow  nativeEvents.h  nativeEvents.mm
src/ui/mainWindow/: mainWindow.cpp  mainWindow.h
src/ui/mainWindow/parts/: mainWindowUI.cpp
src/ui/monitor/: PreferencesDialog.hpp  mainWindow.cpp  mainWindow.h
src/ui/tabs/: FeederTab.cpp  FeederTab.hpp  ShoutTab.cpp  ShoutTab.hpp  TemplateTab.cpp
src/ui/tabs/base/: LogScrollView.cpp  LogScrollView.hpp  TemplateTab.cpp  TemplateTab.h
src/ui/widgets/: LightWidget.cpp  LightWidget.h  TraficLight.cpp  TraficLight.hpp
src/workers/: BashThread.hpp  DASHThread.hpp  DASHThread2.hpp  ITNZWorker.cpp  ITNZWorker.h  feeder.cpp  shout.cpp
src/workers/base/: IConnectivityWorker.h  IMessenger.hpp  ITNZThread.h  ITNZThread.hpp  ITNZWorker.h  MessengerThread.hpp  UpdateCheckerThread.hpp  UpdaterThread.hpp
src/workers/connectivity/: ConnectivityThread.cpp  ConnectivityThread.h  ConnectivityThread.sio.h  sio.cpp
src/workers/dash/: DASHCreationOrder.hpp  DASHThread.hpp
src/workers/feeder/: FeederThread.cpp  FeederThread.h  _exceptions.hpp  feeder.cpp
src/workers/mBeat/: HeartbeatState.hpp  MBeatThread.cpp  MBeatThread.h
src/workers/shout/: ShoutPayload.cpp  ShoutPayload.h  ShoutPayloadConsumer.cpp  ShoutPayloadConsumer.h  ShoutThread.cpp  ShoutThread.h  ShoutThread.mac.cpp  ShoutThread.osx.cpp  ShoutThread.win.cpp  ShoutUploader.cpp  ShoutUploader.h  ShoutWatcher.cpp  ShoutWatcher.h  ShoutWatcher.osx.cpp  ShoutWatcher.win.cpp  shout.cpp  shout.h  shout.win.cpp
src/workers/shout/mac/: mac.cpp
src/workers/shout/win/: MusicAppCOMHandler.cpp  MusicAppCOMHandler.h  iTunesCOMHandler.cpp  iTunesCOMHandler.h  iTunesEventsSink.h  win.cpp
templates/: Info.plist  _version.h  version.h.in
templates/osx/: Info.plist
templates/win/: version.rc
toolchains/: msys2.cmake  osx.cmake  push_release_and_artefact_github.sh  win_generate_pfx.sh
